c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_types/string_initializer_too_long_static.c
/* You can't initialize a char array (including a static one)
 * from a string literal that's too long to fit in it */
int main(void) {
    static char too_long[3] = "abcd";
    return 0;
}